<resources>
    <string name="app_name">FCalculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="asterisk">*</string>
    <string name="slash">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atg">atg</string>
    <string name="actg">actg</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="exp">exp</string>

</resources>
