<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/pow2_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/point"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/fact_btn"
        app:layout_constraintRight_toLeftOf="@+id/pow_btn"
        app:layout_constraintTop_toBottomOf="@+id/ln_btn"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/ln_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/two"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pow2_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/log_btn"
        app:layout_constraintRight_toLeftOf="@+id/pi_btn"
        app:layout_constraintTop_toBottomOf="@+id/acos_btn"
        app:layout_constraintVertical_weight="1"
        tools:text="2"/>

    <Button
        android:id="@+id/log_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/one"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pow2_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ln_btn"
        app:layout_constraintTop_toBottomOf="@+id/acos_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="1"/>

    <Button
        android:id="@+id/sqrt_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/asterisk"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exp_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/pi_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actg_btn"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/pi_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/three"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pow2_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/ln_btn"
        app:layout_constraintRight_toLeftOf="@+id/sqrt_btn"
        app:layout_constraintTop_toBottomOf="@+id/acos_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="3"/>

    <Button
        android:id="@+id/acos_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/five"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ln_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/asin_btn"
        app:layout_constraintRight_toLeftOf="@+id/atg_btn"
        app:layout_constraintTop_toBottomOf="@+id/cos_btn"
        app:layout_constraintVertical_weight="1"
        tools:text="5"/>

    <Button
        android:id="@+id/asin_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/four"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ln_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/acos_btn"
        app:layout_constraintTop_toBottomOf="@+id/cos_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="4"/>

    <Button
        android:id="@+id/actg_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/minus"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sqrt_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/atg_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctg_btn"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/atg_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/six"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ln_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/acos_btn"
        app:layout_constraintRight_toLeftOf="@+id/actg_btn"
        app:layout_constraintTop_toBottomOf="@+id/cos_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="6"/>

    <Button
        android:id="@+id/cos_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/eight"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/acos_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/sin_btn"
        app:layout_constraintRight_toLeftOf="@+id/tg_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:text="8"/>

    <Button
        android:id="@+id/sin_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/seven"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/acos_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cos_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="7"/>

    <Button
        android:id="@+id/ctg_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/plus"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/actg_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tg_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/tg_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/nine"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/acos_btn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/cos_btn"
        app:layout_constraintRight_toLeftOf="@+id/ctg_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"
        tools:text="9"/>

    <Button
        android:id="@+id/pow_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="+/-"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/pow2_btn"
        app:layout_constraintRight_toLeftOf="@+id/exp_btn"
        app:layout_constraintTop_toBottomOf="@+id/ln_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/exp_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/slash"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/pow_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqrt_btn"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/fact_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pow2_btn"
        app:layout_constraintTop_toBottomOf="@+id/ln_btn"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="1"
        tools:text="0"/>

</android.support.constraint.ConstraintLayout>
